=== master

* Deprecate Sequel.identifier_{in,out}put_method= and .quote_identifiers= singleton setters (jeremyevans)

* Deprecate Sequel::Database.identifier_{in,out}put_method and .quote_identifiers singleton accessors (jeremyevans)

* Deprecate loading the identifier_mangling by default, require it be loaded explicitly if needed (jeremyevans)

* Make Database#dump_{table_schema,schema_migration} in schema_dumper extension support :schema option (dadario) (#1328)

* Make Dataset#delete respect an existing limit on Microsoft SQL Server (jeremyevans)

* Add Dataset#skip_limit_check to mark a dataset as skipping the limit/offset check for updates and deletes (jeremyevans)

* Deprecate calling Dataset#{update/delete/truncate} on datasets with limits or offsets unless the database supports it (jeremyevans)

* Add deprecation message for using association_pks setter method with :delay_pks=>true association option (jeremyevans)

* Add deprecation message for using association_pks setter method without :delay_pks association option (jeremyevans)

* Deprecate having duplicate column names in subclass tables when using the class_table_inheritance plugin (jeremyevans)

* Deprecate do (DataObjects), swift, and jdbc/as400 adapters (jeremyevans)

* Deprecate support for Cubrid, Firebird, Informix, and Progress databases (jeremyevans)

* The :proxy_argument option passed to association_proxies plugin block is now an empty hash if no arguments are passed to the association method (jeremyevans)

* Deprecate passing non-hash arguments to association methods (jeremyevans)

* Deprecate passing multiple arguments to association methods (jeremyevans)

* Deprecate model transaction hook methods (jeremyevans)

* Drop support for pg <0.8.0 in the postgres adapter (jeremyevans)

* Deprecate passing a block to Database#from (jeremyevans)

* Deprecate Sequel::Model::ANONYMOUS_MODEL_CLASSES{,_MUTEX} (jeremyevans)
